basic styling with icons

--- a/GunStore/Views/Dealers/Edit.cshtml
+++ b/GunStore/Views/Dealers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.Dealer
+﻿@model GunStore.Models.Seller
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
