--- a/GunStore/Views/Dealers/Delete.cshtml
+++ b/GunStore/Views/Dealers/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.Dealer
+﻿@model GunStore.Models.Seller
 @{
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
