--- a/GunStore/Views/Home/Home.cshtml
+++ b/GunStore/Views/Home/Home.cshtml
@@ -1,33 +1,37 @@
 ﻿@model GunStore.Controllers.Song
 @{
-    ViewBag.Title = "Home";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+ViewBag.Title = "Home";
+Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div id="content">
-    <div id="mainContent">
-        <h1>Guns Trade Center</h1>
-        <p>Here you can shop for guns!</p><br />
-        <section id="homeMain">
-            <article>
-                <section>
-                    <img src="~/Content/Guns-Home.jpg" width="800" />
-                </section>
-            </article>
-            <article class="caution">
-                <p>
-                    <h3>CAUTION!</h3>
-                    Guns are very dangerous, here are some exmaples to be aware from
-                </p>
-                <p>
-                    <video controls>
-                        <source src="~/Videos/GunFails.mp4" type="video/mp4" />
-                        Your browser does not support HTML5 video.
-                    </video>
-                </p>
-            </article>
-        </section>
+<div class="homepage">
+    <h1>Welcome to the ComicBook Online Shop </h1>
+    <aside>Find the best comics and the best comic stores in the world</aside><br />
+
+    <h4>What is a comic book ? </h4>
+    <div class="newspaper">
+        Comics is a medium used to express ideas by images, often combined with text or other visual information. Comics frequently takes the form of juxtaposed sequences of panels of images. Often textual devices such as speech balloons, captions, and onomatopoeia indicate dialogue, narration, sound effects, or other information. Size and arrangement of panels contribute to narrative pacing. Cartooning and similar forms of illustration are the most common image-making means in comics; fumetti is a form which uses photographic images. Common forms of comics include comic strips, editorial and gag cartoons, and comic books. Since the late 20th century, bound volumes such as graphic novels, comic albums, and tankōbon have become increasingly common, and online webcomics have proliferated in the 21st century.
     </div>
+
+    <section id="homeMain">
+        <article>
+            <section>
+                <img src="~/Content/Guns-Home.jpg" width="800" />
+            </section>
+        </article>
+        <article class="caution">
+            <p>
+                <h3>CAUTION!</h3>
+                Guns are very dangerous, here are some exmaples to be aware from
+            </p>
+            <p>
+                <video controls>
+                    <source src="~/Videos/GunFails.mp4" type="video/mp4" />
+                    Your browser does not support HTML5 video.
+                </video>
+            </p>
+        </article>
+    </section>
     <aside>
         <h4>iTunes guns song of the moment:</h4>
         <h5>@Html.DisplayFor(model => model.Name)</h5>
