--- a/GunStore/Views/Shared/_Layout.cshtml
+++ b/GunStore/Views/Shared/_Layout.cshtml
@@ -46,11 +46,11 @@
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav storeNav">
-                            <li>@Html.ActionLink("Comics", "Search", "Guns")</li>
+                            <li>@Html.ActionLink("Comics", "Search", "Comics")</li>
                             <li>@Html.ActionLink("Sellers", "Search", "Dealers")</li>
                             @if (Request.IsAuthenticated)
                             {
-                            <li>@Html.ActionLink("Manage Comics", "Index", "Guns")</li>
+                            <li>@Html.ActionLink("Manage Comics", "Index", "Comics")</li>
                             <li>@Html.ActionLink("Manage Reviews", "Index", "Reviews")</li>
                             <li>@Html.ActionLink("Manage Sellers", "Index", "Dealers")</li>
                         }
