--- a/GunStore/Views/Reviews/Edit.cshtml
+++ b/GunStore/Views/Reviews/Edit.cshtml
@@ -15,17 +15,17 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
         <div class="form-group">
-            @Html.LabelFor(model => model.GunID, "Gun", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ComicsID, "Gun", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("GunID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.GunID, "", new { @class = "text-danger" })
+                @Html.DropDownList("ComicsID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ComicsID, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.GunRank, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ComicsRank, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.GunRank, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.GunRank, "", new { @class = "text-danger" })
+                @Html.EnumDropDownListFor(model => model.ComicsRank, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ComicsRank, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
