--- a/GunStore/Views/Reviews/Index.cshtml
+++ b/GunStore/Views/Reviews/Index.cshtml
@@ -10,10 +10,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Gun.Name)
+            @Html.DisplayNameFor(model => model.Comics.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.GunRank)
+            @Html.DisplayNameFor(model => model.ComicsRank)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Title)
@@ -33,10 +33,10 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Gun.Name)
+                @Html.DisplayFor(modelItem => item.Comics.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.GunRank)
+                @Html.DisplayFor(modelItem => item.ComicsRank)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
