Gal Levy 18:24 ---- Rename

--- a/GunStore/Views/Comics/Details.cshtml
+++ b/GunStore/Views/Comics/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.Comics
+﻿﻿@model ComicBookStore.Models.Comics
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
