--- a/GunStore/Views/Comics/Index.cshtml
+++ b/GunStore/Views/Comics/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GunStore.Models.Comics>
+﻿﻿@model IEnumerable<ComicBookStore.Models.Comics>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
