--- a/GunStore/Views/Home/Home.cshtml
+++ b/GunStore/Views/Home/Home.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Controllers.Song
+﻿@model ComicBookStore.Controllers.Song
 @{
 ViewBag.Title = "Home";
 Layout = "~/Views/Shared/_Layout.cshtml";
