--- a/GunStore/Views/Manage/AddPhoneNumber.cshtml
+++ b/GunStore/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.AddPhoneNumberViewModel
+﻿@model ComicBookStore.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
