--- a/GunStore/Views/Manage/SetPassword.cshtml
+++ b/GunStore/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.SetPasswordViewModel
+﻿@model ComicBookStore.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
