--- a/GunStore/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/GunStore/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.VerifyPhoneNumberViewModel
+﻿@model ComicBookStore.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
