--- a/GunStore/Views/Reviews/Create.cshtml
+++ b/GunStore/Views/Reviews/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.Review
+﻿@model ComicBookStore.Models.Review
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
