--- a/GunStore/Views/Reviews/Index.cshtml
+++ b/GunStore/Views/Reviews/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GunStore.Models.Review>
+﻿@model IEnumerable<ComicBookStore.Models.Review>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
