--- a/GunStore/Views/Sellers/Index.cshtml
+++ b/GunStore/Views/Sellers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GunStore.Models.Seller>
+﻿@model IEnumerable<ComicBookStore.Models.Seller>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
