--- a/GunStore/Views/Sellers/_GunDetails.cshtml
+++ b/GunStore/Views/Sellers/_GunDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.Comics
+﻿﻿@model ComicBookStore.Models.Comics
 <dl class="dl-horizontal">
     <dt>
         @Html.DisplayNameFor(model => model.Name)
