--- a/GunStore/Views/Comics/Create.cshtml
+++ b/GunStore/Views/Comics/Create.cshtml
@@ -1,11 +1,11 @@
-﻿@model GunStore.Models.Comics
+﻿﻿@model ComicBookStore.Models.Comics
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Create</h2>
 
-@using (Html.BeginForm("Create", "Guns", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Create", "Comics", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
