--- a/GunStore/Views/Comics/Delete.cshtml
+++ b/GunStore/Views/Comics/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.Comics
+﻿﻿@model ComicBookStore.Models.Comics
 @{
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
