--- a/GunStore/Views/Comics/Edit.cshtml
+++ b/GunStore/Views/Comics/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.Comics
+﻿﻿@model ComicBookStore.Models.Comics
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
