--- a/GunStore/Views/Manage/ChangePassword.cshtml
+++ b/GunStore/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.ChangePasswordViewModel
+﻿@model ComicBookStore.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
