--- a/GunStore/Views/Manage/ManageLogins.cshtml
+++ b/GunStore/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.ManageLoginsViewModel
+﻿@model ComicBookStore.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
