--- a/GunStore/Views/Sellers/Edit.cshtml
+++ b/GunStore/Views/Sellers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model GunStore.Models.Seller
+﻿@model ComicBookStore.Models.Seller
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
