--- a/GunStore/Views/Sellers/Search.cshtml
+++ b/GunStore/Views/Sellers/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GunStore.Models.Seller>
+﻿@model IEnumerable<ComicBookStore.Models.Seller>
 <div class="dealers-filter">
     <header>
         <h3>Filters</h3>
