--- a/GunStore/Views/Shared/_Layout.cshtml
+++ b/GunStore/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GunStore</title>
+    <title>ComicBookStore</title>
     <link rel="icon" href="@Url.Content("~/favicon.ico")" />
 
     @Scripts.Render("~/bundles/modernizr")
