renames seller/ dealers

--- a/GunStore/Views/Comics/Delete.cshtml
+++ b/GunStore/Views/Comics/Delete.cshtml
@@ -10,10 +10,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Dealer.FirstName)
+            @Html.DisplayNameFor(model => model.Seller.FirstName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Dealer.FirstName)
+            @Html.DisplayFor(model => model.Seller.FirstName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Name)
