--- a/GunStore/Views/Sellers/Search.cshtml
+++ b/GunStore/Views/Sellers/Search.cshtml
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-11">
             <section id="filterBox">
-                @using (Html.BeginForm("Search", "Dealers", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                @using (Html.BeginForm("Search", "Sellers", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
                     <div class="form-group">
                         <label class="col-md-2 control-label" for="@Html.DisplayNameFor(model => model.FirstName)">@Html.DisplayNameFor(model => model.FirstName):</label>
@@ -42,7 +42,7 @@
 
 <div class="dealers-distribution">
     <header>
-        <h4>Distribution Based On Dealer's Reliability &nbsp;&nbsp;<input class="btn btn-default" type="button" value="Show" id="groupByBtn" onclick="showReliabilityGroupBy(this)" /></h4>
+        <h4>Distribution Based On Seller's Reliability &nbsp;&nbsp;<input class="btn btn-default" type="button" value="Show" id="groupByBtn" onclick="showReliabilityGroupBy(this)" /></h4>
     </header>
     <section id="groupByReliabilitySection">
         <table id="dealersReliabilityTable">
@@ -52,7 +52,7 @@
                         <b>Reliability</b>
                     </th>
                     <th>
-                        <b style="margin-left: 80px;">Dealers</b>
+                        <b style="margin-left: 80px;">Sellers</b>
                     </th>
                 </tr>
             </thead>
@@ -62,25 +62,25 @@
 </div>
 <article id="showDealers">
     <div class="filtered-dealers">
-        @foreach (var dealer in Model)
+        @foreach (var seller in Model)
         {
             <section id="filteredListItem">
-                <h3>@dealer.FirstName @dealer.LastName</h3>
+                <h3>@seller.FirstName @seller.LastName</h3>
                 <p>
-                    @for (int i = 0; i < dealer.Reliability; i++)
+                    @for (int i = 0; i < seller.Reliability; i++)
                     {
                         @Html.Raw("&#9733;")
                     }
-                    @for (int i = dealer.Reliability; i < 10; i++)
+                    @for (int i = seller.Reliability; i < 10; i++)
                     {
                         @Html.Raw("&#9734;")
                     }
 
-                    @(" (" + dealer.Reliability + "/10)")
+                    @(" (" + seller.Reliability + "/10)")
                 </p>
-                <p>@dealer.Street, @dealer.City </p>
+                <p>@seller.Street, @seller.City </p>
                 <hr />
-                @foreach (var gun in dealer.Guns)
+                @foreach (var gun in seller.Guns)
                 {
                     @Html.Partial("_GunDetails", gun)
                     <br />
@@ -98,11 +98,11 @@
         if ($(inputBtn).val() === 'Show') {
             $(inputBtn).val('Hide');
 
-            $.getJSON('@Url.Action("GroupByReliability", "Dealers")')
-                .success(function (listOfGroupedByDealers) {
-                    for (var i = 0; i < listOfGroupedByDealers.length; i++) {
-                        var groupedByItem = listOfGroupedByDealers[i];
-                        $('#groupByListTBody').append("<tr><td>" + groupedByItem.Reliability + "</td><td>" + groupedByItem.Dealers + "</td></tr>");
+            $.getJSON('@Url.Action("GroupByReliability", "Sellers")')
+                .success(function (listOfGroupedBySellers) {
+                    for (var i = 0; i < listOfGroupedBySellers.length; i++) {
+                        var groupedByItem = listOfGroupedBySellers[i];
+                        $('#groupByListTBody').append("<tr><td>" + groupedByItem.Reliability + "</td><td>" + groupedByItem.Sellers + "</td></tr>");
                         console.log(groupedByItem);
                     }
                 });
