--- a/GunStore/Views/Shared/_Layout.cshtml
+++ b/GunStore/Views/Shared/_Layout.cshtml
@@ -66,12 +66,12 @@
             <h3>&copy; @DateTime.Now.Year - ComicBookStore</h3>
             <nav>
                 <a>@Html.ActionLink("Comics", "Search", "Guns")</a>
-                <a>@Html.ActionLink("Sellers", "Search", "Dealers")</a>
+                <a>@Html.ActionLink("Sellers", "Search", "Sellers")</a>
                 @if (Request.IsAuthenticated)
                 {
                 <a>@Html.ActionLink("Manage Comics", "Index", "Guns")</a>
                 <a>@Html.ActionLink("Manage Reviews", "Index", "Reviews")</a>
-                <a>@Html.ActionLink("Manage Sellers", "Index", "Dealers")</a>
+                <a>@Html.ActionLink("Manage Sellers", "Index", "Sellers")</a>
             }
             <a>@Html.ActionLink("Contact", "Index", "Map")</a>
         </nav>
