--- a/GunStore/Views/Comics/Edit.cshtml
+++ b/GunStore/Views/Comics/Edit.cshtml
@@ -15,7 +15,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
         <div class="form-group">
-            @Html.LabelFor(model => model.SellerId, "Dealer", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SellerId, "Seller", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("SellerId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SellerId, "", new { @class = "text-danger" })
