--- a/GunStore/Views/Sellers/Delete.cshtml
+++ b/GunStore/Views/Sellers/Delete.cshtml
@@ -6,7 +6,7 @@
 <h2>Delete</h2>
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Dealer</h4>
+    <h4>Seller</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
